Add shot stats to teams; add winning_team_id to game object

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -80,3 +80,6 @@ Style/TrailingCommaInHashLiteral:
 
 Layout/MultilineMethodCallIndentation:
   EnforcedStyle: indented
+
+Layout/MultilineAssignmentLayout:
+  EnforcedStyle: new_line
