--- a/spec/support/fixtures/cassettes/AhlScraper_Games/_retrieve/returns_game_object.yml
+++ b/spec/support/fixtures/cassettes/AhlScraper_Games/_retrieve/returns_game_object.yml
@@ -23,7 +23,7 @@ http_interactions:
       Content-Type:
       - application/json
       Date:
-      - Sun, 20 Jun 2021 05:46:21 GMT
+      - Mon, 21 Jun 2021 03:36:17 GMT
       Expires:
       - Thu, 19 Nov 1981 08:52:00 GMT
       Pragma:
@@ -31,7 +31,7 @@ http_interactions:
       Server:
       - Apache/2.4.6 (CentOS) OpenSSL/1.0.2k-fips PHP/7.3.13
       Set-Cookie:
-      - PHPSESSID=jp1m96cr0r1hej0nq0mkad9g09; path=/
+      - PHPSESSID=6l85dri29knn1mkn85hpamdr61; path=/
       Vary:
       - Accept-Encoding
       X-Powered-By:
@@ -87,7 +87,7 @@ http_interactions:
         Valley Phantoms","city":"Lehigh Valley","nickname":"Phantoms","abbreviation":"LHV","logo":"https:\/\/assets.leaguestat.com\/ahl\/logos\/313.jpg","divisionName":"North
         Division"},"player":{"info":{"id":0,"firstName":null,"lastName":null,"jerseyNumber":0,"position":null,"birthDate":null},"stats":{"goals":0,"assists":0,"points":0,"penaltyMinutes":0,"plusMinus":0,"faceoffAttempts":0,"faceoffWins":0,"shots":0,"hits":0},"starting":0,"status":null},"isGoalie":false,"playerImage":"
         ","sponsor":{"name":null,"image":null}}})
-  recorded_at: Sun, 20 Jun 2021 05:46:22 GMT
+  recorded_at: Mon, 21 Jun 2021 03:36:17 GMT
 - request:
     method: get
     uri: https://lscluster.hockeytech.com/feed/index.php?callback=json&client_code=ahl&feed=statviewfeed&game_id=1022057&key=50c2cd9b5e18e390&lang=en&league_id=&view=gameCenterPlayByPlay
@@ -111,7 +111,7 @@ http_interactions:
       Content-Type:
       - application/json
       Date:
-      - Sun, 20 Jun 2021 05:46:22 GMT
+      - Mon, 21 Jun 2021 03:36:17 GMT
       Expires:
       - Thu, 19 Nov 1981 08:52:00 GMT
       Pragma:
@@ -119,13 +119,13 @@ http_interactions:
       Server:
       - Apache/2.4.6 (CentOS) OpenSSL/1.0.2k-fips PHP/7.3.13
       Set-Cookie:
-      - PHPSESSID=i1djacslsaraot58g88tl64601; path=/
+      - PHPSESSID=2744aa50ak2dc8ctnqtk8qqfmb; path=/
       Vary:
       - Accept-Encoding
       X-Powered-By:
       - PHP/7.3.13
       Content-Length:
-      - '2772'
+      - '2771'
       Connection:
       - keep-alive
     body:
@@ -173,9 +173,9 @@ http_interactions:
         quality on net","shotType":"Default","xLocation":193,"yLocation":171}},{"event":"shot","details":{"shooter":{"id":4880,"firstName":"Steve","lastName":"Whitney","jerseyNumber":11,"position":"RW","birthDate":""},"goalie":{"id":5996,"firstName":"Zane","lastName":"McIntyre","jerseyNumber":31,"position":"G","birthDate":""},"shooterTeamId":"319","period":{"id":"3","shortName":"3","longName":"3rd"},"time":"1:59","isGoal":false,"shotQuality":"Non
         quality on net","shotType":"Default","xLocation":166,"yLocation":165}},{"event":"shot","details":{"shooter":{"id":7850,"firstName":"Egor","lastName":"Zamula","jerseyNumber":4,"position":"D","birthDate":""},"goalie":{"id":5658,"firstName":"Pheonix","lastName":"Copley","jerseyNumber":31,"position":"G","birthDate":""},"shooterTeamId":"313","period":{"id":"3","shortName":"3","longName":"3rd"},"time":"1:59","isGoal":false,"shotQuality":"Quality
         on net","shotType":"Default","xLocation":511,"yLocation":153}},{"event":"shot","details":{"shooter":{"id":8026,"firstName":"Martin","lastName":"Fehervary","jerseyNumber":32,"position":"D","birthDate":""},"goalie":{"id":5996,"firstName":"Zane","lastName":"McIntyre","jerseyNumber":31,"position":"G","birthDate":""},"shooterTeamId":"319","period":{"id":"3","shortName":"3","longName":"3rd"},"time":"1:59","isGoal":false,"shotQuality":"Non
-        quality on net","shotType":"Default","xLocation":196,"yLocation":115}},{"event":"shot","details":{"shooter":{"id":1445,"firstName":"Matt","lastName":"Moulson","jerseyNumber":26,"position":"LW","birthDate":""},"goalie":{"id":5996,"firstName":"Zane","lastName":"McIntyre","jerseyNumber":31,"position":"G","birthDate":""},"shooterTeamId":"319","period":{"id":"3","shortName":"3","longName":"3rd"},"time":"1:59","isGoal":false,"shotQuality":"Non
-        quality on net","shotType":"Default","xLocation":162,"yLocation":99}},{"event":"shot","details":{"shooter":{"id":7648,"firstName":"Riley","lastName":"Sutter","jerseyNumber":24,"position":"C","birthDate":""},"goalie":{"id":5996,"firstName":"Zane","lastName":"McIntyre","jerseyNumber":31,"position":"G","birthDate":""},"shooterTeamId":"319","period":{"id":"3","shortName":"3","longName":"3rd"},"time":"1:59","isGoal":false,"shotQuality":"Quality
-        on net","shotType":"Default","xLocation":124,"yLocation":111}},{"event":"penalty","details":{"game_penalty_id":"247732","period":{"id":"3","shortName":"3","longName":"3rd"},"time":"4:22","againstTeam":{"id":319,"name":"","city":"","nickname":"","abbreviation":"HER","logo":""},"minutes":"2.00","description":"Boarding","ruleNumber":"","takenBy":{"id":8525,"firstName":"Damien","lastName":"Riat","jerseyNumber":20,"position":"RW","birthDate":""},"servedBy":{"id":8525,"firstName":"Damien","lastName":"Riat","jerseyNumber":20,"position":"RW","birthDate":""},"isPowerPlay":true,"isBench":false}},{"event":"shot","details":{"shooter":{"id":8451,"firstName":"Zayde","lastName":"Wisdom","jerseyNumber":14,"position":"F","birthDate":""},"goalie":{"id":5658,"firstName":"Pheonix","lastName":"Copley","jerseyNumber":31,"position":"G","birthDate":""},"shooterTeamId":"313","period":{"id":"3","shortName":"3","longName":"3rd"},"time":"6:37","isGoal":false,"shotQuality":"Quality
+        quality on net","shotType":"Default","xLocation":196,"yLocation":115}},{"event":"shot","details":{"shooter":{"id":7648,"firstName":"Riley","lastName":"Sutter","jerseyNumber":24,"position":"C","birthDate":""},"goalie":{"id":5996,"firstName":"Zane","lastName":"McIntyre","jerseyNumber":31,"position":"G","birthDate":""},"shooterTeamId":"319","period":{"id":"3","shortName":"3","longName":"3rd"},"time":"1:59","isGoal":false,"shotQuality":"Quality
+        on net","shotType":"Default","xLocation":124,"yLocation":111}},{"event":"shot","details":{"shooter":{"id":1445,"firstName":"Matt","lastName":"Moulson","jerseyNumber":26,"position":"LW","birthDate":""},"goalie":{"id":5996,"firstName":"Zane","lastName":"McIntyre","jerseyNumber":31,"position":"G","birthDate":""},"shooterTeamId":"319","period":{"id":"3","shortName":"3","longName":"3rd"},"time":"1:59","isGoal":false,"shotQuality":"Non
+        quality on net","shotType":"Default","xLocation":162,"yLocation":99}},{"event":"penalty","details":{"game_penalty_id":"247732","period":{"id":"3","shortName":"3","longName":"3rd"},"time":"4:22","againstTeam":{"id":319,"name":"","city":"","nickname":"","abbreviation":"HER","logo":""},"minutes":"2.00","description":"Boarding","ruleNumber":"","takenBy":{"id":8525,"firstName":"Damien","lastName":"Riat","jerseyNumber":20,"position":"RW","birthDate":""},"servedBy":{"id":8525,"firstName":"Damien","lastName":"Riat","jerseyNumber":20,"position":"RW","birthDate":""},"isPowerPlay":true,"isBench":false}},{"event":"shot","details":{"shooter":{"id":8451,"firstName":"Zayde","lastName":"Wisdom","jerseyNumber":14,"position":"F","birthDate":""},"goalie":{"id":5658,"firstName":"Pheonix","lastName":"Copley","jerseyNumber":31,"position":"G","birthDate":""},"shooterTeamId":"313","period":{"id":"3","shortName":"3","longName":"3rd"},"time":"6:37","isGoal":false,"shotQuality":"Quality
         on net","shotType":"Default","xLocation":461,"yLocation":164}},{"event":"shot","details":{"shooter":{"id":7850,"firstName":"Egor","lastName":"Zamula","jerseyNumber":4,"position":"D","birthDate":""},"goalie":{"id":5658,"firstName":"Pheonix","lastName":"Copley","jerseyNumber":31,"position":"G","birthDate":""},"shooterTeamId":"313","period":{"id":"3","shortName":"3","longName":"3rd"},"time":"8:24","isGoal":false,"shotQuality":"Non
         quality on net","shotType":"Default","xLocation":447,"yLocation":102}},{"event":"shot","details":{"shooter":{"id":8447,"firstName":"Linus","lastName":"Hogberg","jerseyNumber":6,"position":"D","birthDate":""},"goalie":{"id":5658,"firstName":"Pheonix","lastName":"Copley","jerseyNumber":31,"position":"G","birthDate":""},"shooterTeamId":"313","period":{"id":"3","shortName":"3","longName":"3rd"},"time":"8:27","isGoal":false,"shotQuality":"Non
         quality on net","shotType":"Default","xLocation":412,"yLocation":59}},{"event":"shot","details":{"shooter":{"id":8447,"firstName":"Linus","lastName":"Hogberg","jerseyNumber":6,"position":"D","birthDate":""},"goalie":{"id":5658,"firstName":"Pheonix","lastName":"Copley","jerseyNumber":31,"position":"G","birthDate":""},"shooterTeamId":"313","period":{"id":"3","shortName":"3","longName":"3rd"},"time":"9:30","isGoal":false,"shotQuality":"Non
@@ -195,7 +195,7 @@ http_interactions:
         on net","shotType":"Default","xLocation":503,"yLocation":176}},{"event":"shot","details":{"shooter":{"id":8042,"firstName":"Max","lastName":"Willman","jerseyNumber":20,"position":"LW","birthDate":""},"goalie":{"id":5658,"firstName":"Pheonix","lastName":"Copley","jerseyNumber":31,"position":"G","birthDate":""},"shooterTeamId":"313","period":{"id":"4","shortName":"OT","longName":"OT"},"time":"1:59","isGoal":false,"shotQuality":"Quality
         on net","shotType":"Default","xLocation":483,"yLocation":93}},{"event":"shot","details":{"shooter":{"id":6662,"firstName":"Ryan","lastName":"Fitzgerald","jerseyNumber":13,"position":"LW","birthDate":""},"goalie":{"id":5658,"firstName":"Pheonix","lastName":"Copley","jerseyNumber":31,"position":"G","birthDate":""},"shooterTeamId":"313","period":{"id":"4","shortName":"OT","longName":"OT"},"time":"1:59","isGoal":true,"shotQuality":"Quality
         goal","shotType":"Default","xLocation":460,"yLocation":80}},{"event":"goal","details":{"game_goal_id":"110380","team":{"id":313,"name":"","city":"","nickname":"","abbreviation":"LHV","logo":""},"period":{"id":"4","shortName":"OT","longName":"OT"},"time":"1:59","scorerGoalNumber":"1","scoredBy":{"id":6662,"firstName":"Ryan","lastName":"Fitzgerald","jerseyNumber":13,"position":"LW","birthDate":""},"assists":[{"id":7849,"firstName":"Wyatte","lastName":"Wylie","jerseyNumber":28,"position":"D","birthDate":""},{"id":1192,"firstName":"Cal","lastName":"O'Reilly","jerseyNumber":9,"position":"C","birthDate":""}],"assistNumbers":["1","1"],"properties":{"isPowerPlay":"0","isShortHanded":"0","isEmptyNet":"0","isPenaltyShot":"0","isInsuranceGoal":"0","isGameWinningGoal":"1"},"plus_players":[{"id":1192,"firstName":"Cal","lastName":"O'Reilly","jerseyNumber":9,"position":"C","birthDate":""},{"id":6662,"firstName":"Ryan","lastName":"Fitzgerald","jerseyNumber":13,"position":"LW","birthDate":""},{"id":7849,"firstName":"Wyatte","lastName":"Wylie","jerseyNumber":28,"position":"D","birthDate":""}],"minus_players":[{"id":6787,"firstName":"Lucas","lastName":"Johansen","jerseyNumber":6,"position":"D","birthDate":""},{"id":7648,"firstName":"Riley","lastName":"Sutter","jerseyNumber":24,"position":"C","birthDate":""},{"id":1445,"firstName":"Matt","lastName":"Moulson","jerseyNumber":26,"position":"LW","birthDate":""}],"xLocation":460,"yLocation":80}}])
-  recorded_at: Sun, 20 Jun 2021 05:46:22 GMT
+  recorded_at: Mon, 21 Jun 2021 03:36:18 GMT
 - request:
     method: get
     uri: https://lscluster.hockeytech.com/feed/index.php?callback=json&client_code=ahl&feed=statviewfeed&key=50c2cd9b5e18e390&lang=en&league_code=&league_id=&pageName=schedule&season=latest&site_id=1&view=bootstrap
@@ -219,7 +219,7 @@ http_interactions:
       Content-Type:
       - application/json
       Date:
-      - Sun, 20 Jun 2021 05:46:22 GMT
+      - Mon, 21 Jun 2021 03:36:18 GMT
       Expires:
       - Thu, 19 Nov 1981 08:52:00 GMT
       Pragma:
@@ -227,7 +227,7 @@ http_interactions:
       Server:
       - Apache/2.4.6 (CentOS) OpenSSL/1.0.2k-fips PHP/7.3.13
       Set-Cookie:
-      - PHPSESSID=ri73u436mhsrsi21lphikfq5ms; path=/
+      - PHPSESSID=f1rgsgh357hu9ilrlkbc33sto4; path=/
       Vary:
       - Accept-Encoding
       X-Powered-By:
@@ -366,5 +366,5 @@ http_interactions:
         (Away)","Most_Penalty_Minutes":"Most Penalty Minutes","shoots_on":"shoots
         on","shootout_attempt_on":"shootout attempt on","Game_Winning":"Game Winning","Game_Center":"Game
         Center","Game_Summary":"Game Summary","Insurance_Goal":"Insurance Goal","Summary":"Summary","Standings":"Standings","Preview":"Preview"}})'
-  recorded_at: Sun, 20 Jun 2021 05:46:22 GMT
+  recorded_at: Mon, 21 Jun 2021 03:36:18 GMT
 recorded_with: VCR 6.0.0
